--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -142,9 +142,9 @@ The concentration of resubstitution accuracy near $1$, and its discreteness, ren
 
 
 To compare the power of accuracy tests and location tests in finite samples, we perform a simulation study of a battery of test statistics. 
-The main findings are reported in Sections~\ref{sec:power} and \ref{sec:example}, and the intuition for our findings is provided in Section~\ref{sec:discussion}, but first, the problem's setup. 
-
-
+We start with fomalizing the problem in Section~\ref{sec:problem_setup}.
+The main findings are reported in Sections~\ref{sec:power} and \ref{sec:example}. 
+A discussion follows in Section~\ref{sec:discussion}. 
 
 
 
