--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -201,10 +201,7 @@ We will adhere, even though it can be circumvented by permuting features instead
 
 \paragraph{How many folds?}
 Different authors suggest different rules for the number of folds. 
-We will be varying the number of folds.
-This will affect the concentration of permutation distribution of the estimated accuracy, which will have a crucial effect on the conservativeness of the accuracy test. 
-Our intuition suggests that since more folds imply a less concentrated estimate, then leave-one-out should be the less conservative, and 2-fold should be the most conservative. 
-
+We will be varying the number of folds, and ultimately discover that the power \emph{decreases with the number of folds}. 
 
 \paragraph{How to estimate accuracy?}
 \label{sec:estimate_accuracy}
