--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -161,7 +161,11 @@ I.e., we test if the multivariate voxel activation pattern has the same distribu
 
 An accuracy test amounts to learning a predictive model $\hypEstim(\features)$ from some assumed model class $\hypEstim \in \hypclass$. 
 The prediction accuracy, denoted $\acc_{\hypEstim}$, is defined as the probability of a given classifier $\hypEstim$ of making a correct prediction.
-Denoting by $I(A)$ the indicator function of the event $A$, we have $\acc_{\hypEstim}:=\expect{I(\hypEstim(x)=y)}$ when given a randomly drawn data point, ($\features,\outcomes$). 
+Denoting by $I(A)$ the indicator function of the event $A$, we get
+\begin{align}
+	\acc_{\hypEstim}:=\expect{I(\hypEstim(x)=y)}
+\end{align}
+when given a randomly drawn data point, ($\features,\outcomes$). 
 A statistically significant ``better than chance'' estimate of $\acc_{\hypEstim}$ is evidence that the classes are distinct. 
 
 
@@ -205,14 +209,16 @@ We will be varying the number of folds, and ultimately discover that the power \
 
 \paragraph{How to estimate accuracy?}
 \label{sec:estimate_accuracy}
-Given a predictor $\hypEstim$, a natural test statistic is some estimate of its accuracy $\acc_{\hypEstim}$.
-Complicating matters: very low accuracies, even $0$, is evidence that the classes are separated, and we only need to invert the predictions. 
-We can thus consider $|\acc_{\hypEstim}-0.5|$ as the test statistic.
-This, however, implies that if the classes are identical, random guessing has $0.5$ accuracy. This is not true if the classes are not balanced. 
-For unbalanced data the accuracy chance level is the probability of the majority class, we denote by $\majority$ \citep[ Sec 4.1]{golland_permutation_2005}.
+Given a predictor $\hypEstim$, a natural accuracy test statistic its accuracy $\acc_{\hypEstim}$.
+Since low accuracies, even $0$, are evidence that the classes are separated, can consider the departure from chance level, $|\acc_{\hypEstim}-0.5|$, as the test statistic.
+For unbalanced classes, chance level is not $0.5$, but rather the the probability of the majority class, we denote by $\majority$.
 This suggests the following test statistic $|\acc_{\hypEstim}-\majority|$.
 Since we will be aggregating these statistics over random data sets where $\majority$ may vary, it seems appropriate to standardize the scale of this statistic. 
-We thus also consider the z-scored accuracy: $|\acc_{\hypEstim}-\majority|/\sqrt{\majority(1-\majority)}$. 
+We thus propose the z-scored accuracy statistic: 
+\begin{align}
+\label{eq:z_scored_accuracy}
+	|\acc_{\hypEstim}-\majority|/\sqrt{\majority(1-\majority)}.
+\end{align} 
 
 
 The of tests we will be comparing is collected for convenience in Table~\ref{tab:collected}.
