--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -275,7 +275,7 @@ This is true, in particular if:
 (a) the folds are balanced or not,
 (b) the tuning parameters of some test statistic are varied,
 (d) the number of folds is varied.
-We also observe that the most conservative tests are the resubstitution accuracy measures. 
+We also observe that the most conservative tests are the resubstitution accuracy statistics. 
 We return to this matter in the Discussion.
 
 
@@ -291,7 +291,7 @@ The various statistics on the $y$ axis.
 Their details are given in Table~\ref{tab:collected}. 
 Effects vary over $0$ (red circle), $0.25$ (green triangle), and $0.5$ (blue square). 
 Simulation details in Appendix~\ref{apx:simulation_details}.
-Cross-validation was performed with balanced (stratified) and unbalanced data folding. See sub-captions.}	
+Cross-validation was performed with balanced and unbalanced data folding. See sub-captions.}	
 \label{fig:simulation_1}
 \begin{subfigure}{.5\textwidth}
 \centering
