--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -315,7 +315,7 @@ Cross-validation was performed with balanced and unbalanced data folding. See su
 \label{sec:power}
 
 Having established that all of the tests in our battery control the false positive rate, it remains to be seen if they have similar power-- 
-especially when comparing the power of population tests to accuracy tests. 
+especially when comparing population tests to accuracy tests. 
 From the simulation results reported in Appendix~\ref{apx:simulations} we collect the following insights:
 \begin{enumerate}
 \item population tests have more power than accuracy tests in all our configurations.
