--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -319,18 +319,24 @@ especially when comparing population tests to accuracy tests.
 From the simulation results reported in Appendix~\ref{apx:simulations} we collect the following insights:
 \begin{enumerate}
 \item population tests have more power than accuracy tests in all our configurations.
-\item The conservativeness decays as the sample grows (Figures~\ref{fig:large_sample_1}, \ref{fig:large_sample_2} and \ref{fig:large_sample_3}), suggesting that concentration and\slash or discretization is responsible for power loss. 
-\item The power may increase or decrease with the number of folds (Figure~\ref{fig:n_folds}). %TODO: effect of n.folds.
+
+\item The conservativeness decays as the sample grows (Figures~\ref{fig:large_sample_1}, \ref{fig:large_sample_2} and \ref{fig:large_sample_3})
+
+\item For heavy tailed distributions (Figure~\ref{fig:t_null}), the extra power of the location test vanishes. 
+
 \item The z-scoring of the accuracies was introduced to deal with unbalanced foldings. 
 If the z-scoring has any effect at all, it merely kills power.
-There is really no reason to use it. 
+
 \item Both accuracy and population tests are inappropriate for scale alternatives (Figure~\ref{fig:scale_change}). 
 This was to be expected and is reported mostly as a sanity check.
-\item The presence of heavy tails (Figure~\ref{fig:t_null}) may reduce power, but does not quantitatively change results. 
-\item Balanced folding typically has no effect. 
-It increased power only for the z-scored statistics (Figure~\ref{fig:simulation_1}). This is surprising given they were precisely designed to deal with the presence of imbalance. 
-\item Varying the accuracy test's tunning parameter, such as the cost (i.e. margins) has no effect on the power of the test. 
-\item Correlation between coordinates, mimicking temporal correlation in fMRI data, has no effect on conclusions, since all test statistics account for this correlation (Figure~\ref{fig:ar_1}).
+
+\item Balanced folding only affects the z-scored accuracy, in the opposite direction than we anticipated. 
+
+\item Increasing the SVM's cost parameter, which reduces the number of support vectors entering the classifier, reduces power. 
+
+\item The presence of correlations between coordiantes reduces the signal to noise ratio (SNR), thus reduces power. 
+More importantly, in the presence of correlations the effect of regularization is amplified, increasing the power difference between regulirized and non-regulirized test statistics.
+Put differently- in low SNR regimes, regularization proves crucial (Figure~\ref{fig:ar_1}).
 \end{enumerate}
 
 
